feat: implement soft delete for user and staff records in tenant management